<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/AzulClaro"
        app:title="@string/titletolbar"
        app:titleTextColor="@color/white"/>

    <ImageView
        android:id="@+id/imgregister"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:src="@drawable/bodega"
        android:layout_below="@+id/tolbar"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_below="@+id/imgregister">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:id="@+id/editnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgregister"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/nombreregister"
            android:singleLine="true"
            android:textColorHint="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidoregister"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:singleLine="true"
            android:textColorHint="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/txtCorreo"
            android:textColorHint="@color/black"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:singleLine="true"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContraseña"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                app:endIconMode="password_toggle"
                android:hint="Ingresa tu contraseña"
                android:layout_marginTop="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/rcontraseñaregister"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:hint="Ingresa tu contraseña"
                android:layout_marginTop="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btnregistrar"
                android:textSize="20dp"
                android:background="@color/AzulClaro"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView >