<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imgbodega"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-30dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/imgbodega"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresacorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgbodega"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:startIconDrawable="@drawable/email"
        android:hint="Ingresa tu correo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresacontraseña"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ingresacorreo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ingresa_contraseña"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContraseña"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="50dp"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIniciaSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingresacontraseña"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/btniniciasesion"
        android:background="@color/AzulClaro"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnIniciaSesion"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentStart="true"
        android:text="@string/btnregistrar"
        android:textSize="20dp"
        android:background="@color/rojo"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
</ScrollView>
